# rinha-python-2025

./: .dockerignore  .gitignore  DOCKER_HUB_README.md  Dockerfile  README.md  debug_test.py  docker-compose.yml  pyproject.toml  test_data.json
app/: config.py  main.py  utils.py
app/client/: session.py
app/database/: __init__.py  redis_pool.py  storage.py
app/processor/: processor.py
app/routes/: healthcheck.py  payments.py  purge.py
app/worker/: setup.py  worker.py
