[project]
name = "rinha-python-2025"
version = "0.1.0"
description = "Projeto Rinha Backend 2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "orjson>=3.11.1",
    "redis>=6.4.0",
    "starlette>=0.47.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
